[package]
name = "coap-client"
description = "A CoAP client"
readme = "README.md"
version = "0.1.0"
authors = ["ryan <ryan@kurte.nz>"]
repository = "https://github.com/ryankurte/rust-coap-client"
license = "MPL-2.0"
edition = "2018"

[features]
util = [ "simplelog", "structopt", "humantime" ]
default = [ "tokio", "rand" ]

[dependencies]

futures = "0.3.12"
bytes = "1.0.1"
coap-lite = "0.3.5"

rand = { version = "0.8.3", optional = true }
tokio = { version = "1.1.1", features = [ "full" ], optional = true }


structopt = { version = "0.3.17", optional = true }
simplelog = { version = "0.9.0", optional = true }
humantime = { version = "2.0.1", optional = true }
no-std-net = "0.5.0"
log = "0.4.14"

