[package]
name = "coap-client"
description = "A CoAP client"
readme = "README.md"
version = "0.3.1"
authors = ["ryan <ryan@kurte.nz>"]
repository = "https://github.com/ryankurte/rust-coap-client"
license = "MPL-2.0"
edition = "2018"

[features]
backend-tokio = [ "tokio", "openssl", "tokio-openssl" ]

util = [ "simplelog", "backend-tokio", "anyhow", "hex" ]
default = [ "backend-tokio", "util" ]

[dependencies]

futures = "0.3.12"
bytes = "1.0.1"
coap-lite = "0.4.0"
rand = "0.8.3"
log = "0.4.14"
url = "2.2.0"
async-trait = "0.1.42"

tokio = { version = "1.1.1", features = [ "full" ], optional = true }
openssl = { version = "0.10.32", optional = true }
tokio-openssl = { version = "0.6.1", optional = true }


structopt = { version = "0.3.17" }
simplelog = { version = "0.12.0", optional = true }
humantime = { version = "2.1.0" }

strum = { version = "0.22.0" }
strum_macros = { version = "0.20.1" }
anyhow = { version = "1.0.38", optional = true }
thiserror = "1.0.23"
hex = { version = "0.4.2", optional = true }

[dev-dependencies]
simplelog = "0.12.0"

[[bin]]
name = "coap-client"
path = "src/util.rs"
required-features = [ "util" ]
